full JSON data compatibility added; dialogue class expansion